--- a/styles.css
+++ b/styles.css
@@ -38,16 +38,26 @@ header .logo h1{
 }
 
 body {
-  background-color: rgb(157, 190, 219);
+  background: rgb(17,62,140);
+  background: linear-gradient(94deg, rgba(17,62,140,1) 0%, rgba(10,203,242,1) 100%);
+  height: 100vh;
 }
 
 .content{
     margin: 15px;
+    gap: 10px;
+    flex-wrap: wrap;
     padding: 15px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-img{
-  width: 50px;
+.card-img-top{
+  height: 300px;
+  object-fit: cover;
+  width: 100%;
+
 }
+
 
